--- a/WeddingService.Bll/WeddingService.Bll.csproj
+++ b/WeddingService.Bll/WeddingService.Bll.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\WeddingService.Dal\WeddingService.Dal.csproj" />
     <ProjectReference Include="..\WeddingService.Dll\WeddingService.Dal.csproj" />
   </ItemGroup>
 
