Project clean up

--- a/WeddingServiceLab/WeddingServiceLab.csproj
+++ b/WeddingServiceLab/WeddingServiceLab.csproj
@@ -13,17 +13,21 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.10">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <TreatAsUsed>true</TreatAsUsed>
     </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1">
+      <TreatAsUsed>true</TreatAsUsed>
+    </PackageReference>
     <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
-    <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0">
+      <TreatAsUsed>true</TreatAsUsed>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\WeddingService.Bll\WeddingService.Bll.csproj" />
     <ProjectReference Include="..\WeddingService.Dal\WeddingService.Dal.csproj" />
-    <ProjectReference Include="..\WeddingService.Dll\WeddingService.Dal.csproj" />
   </ItemGroup>
 
 </Project>
