Added ASP tests

--- a/WeddingServiceLab/appsettings.json
+++ b/WeddingServiceLab/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=ShindQQ;Database=WeddingServices;Trusted_Connection=True;"
+    "DefaultConnection": "Server=ShindQQ;Database=WeddingServices;Trusted_Connection=True;",
+    "SalivonConnection": "Server=DESKTOP-HAL50HT;Database=WeddingServices;Trusted_Connection=True;"
   },
   "AllowedHosts": "*"
 }
