Added docker support

--- a/WeddingServiceLab/appsettings.json
+++ b/WeddingServiceLab/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=ShindQQ;Database=WeddingServices;Trusted_Connection=True;",
+    "DefaultConnection": "Server=localhost, 1433;Database=WeddingServices;Trusted_Connection=False;User Id=SA;Password=WeddingServicePassword123",
     "SalivonConnection": "Server=DESKTOP-HAL50HT;Database=WeddingServices;Trusted_Connection=True;"
   },
   "AllowedHosts": "*"
