--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
   - "8000:80"
  sql-server-db:
   container_name: sql-server-db
+  restart: unless-stopped
   image: mcr.microsoft.com/mssql/server:2022-latest
   ports:
     - "1433:1433"
